@@ -2,6 +2,7 @@ Release Notes
 
 planed as v0.12
 - added the possibility to open a circuit from the command line
+- The backspace key works like the delete key.
 
 v0.11, released on 20. Apr 2017
 - Added floating gate FETs.
